--- a/style.css
+++ b/style.css
@@ -214,6 +214,38 @@ button:hover {
     background: #7f6a56;
 }
 
+#save-load-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+    margin-top: 20px;
+}
+
+#save-buttons, #load-buttons {
+    border: 5px solid #776e65;
+    border-radius: 10px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 10px 0;
+}
+
+button {
+    background: #8f7a66;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background: #7f6a56;
+}
+
 .tile-new {
     animation: appear 0.2s;
 }
