--- a/style.css
+++ b/style.css
@@ -225,15 +225,23 @@ button:hover {
   margin-top: 20px;
 }
 
-#save-buttons,
+#save-buttons {
+  border: 5px solid #776e65;
+  border-radius: 10px;
+  display: grid;
+  align-items: center;
+  padding: 10px;
+}
+
 #load-buttons {
   border: 5px solid #776e65;
   border-radius: 10px;
-  padding: 5px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 10px;
-  margin: 10px 0;
+  align-items: center;
+  margin: 20px;
+  padding: 10px;
 }
 
 button {
